used FileReaderService in 2022
Also a few small functional programming changes